--- a/app/src/main/res/layout/activity_navi.xml
+++ b/app/src/main/res/layout/activity_navi.xml
@@ -111,6 +111,13 @@
         android:textColor="#F8F4F4"
         android:textSize="30sp" />
 
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom|right"
+        android:text="@string/version"
+        android:textSize="24sp" />
 
 
 </LinearLayout>
