--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="957dp"
+        android:layout_height="0dp"
         android:background="?android:attr/colorButtonNormal"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,12 +37,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView1"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -50,7 +51,7 @@
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -58,7 +59,7 @@
 
             <ImageView
                 android:id="@+id/imageView3"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -66,7 +67,7 @@
 
             <ImageView
                 android:id="@+id/imageView4"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -76,12 +77,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView5"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -89,7 +91,7 @@
 
             <ImageView
                 android:id="@+id/imageView6"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -97,7 +99,7 @@
 
             <ImageView
                 android:id="@+id/imageView7"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -105,7 +107,7 @@
 
             <ImageView
                 android:id="@+id/imageView8"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -115,12 +117,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView9"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -128,7 +131,7 @@
 
             <ImageView
                 android:id="@+id/imageView10"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -136,7 +139,7 @@
 
             <ImageView
                 android:id="@+id/imageView11"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -144,7 +147,7 @@
 
             <ImageView
                 android:id="@+id/imageView12"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -153,20 +156,21 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView13"
-                android:layout_width="25dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
                 android:src="@drawable/img05" />
 
             <ImageView
                 android:id="@+id/imageView14"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -174,15 +178,15 @@
 
             <ImageView
                 android:id="@+id/imageView15"
-                android:layout_width="25dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
                 android:src="@drawable/img07" />
 
             <ImageView
                 android:id="@+id/imageView16"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -191,12 +195,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView17"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -204,7 +209,7 @@
 
             <ImageView
                 android:id="@+id/imageView18"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -212,7 +217,7 @@
 
             <ImageView
                 android:id="@+id/imageView19"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -220,7 +225,7 @@
 
             <ImageView
                 android:id="@+id/imageView20"
-                android:layout_width="25dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
