ファイル名が不正だったので修正

--- a/app/src/main/res/layout/activity_history_photo.xml
+++ b/app/src/main/res/layout/activity_history_photo.xml
@@ -15,5 +15,5 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/History_Photo" />
+        app:srcCompat="@drawable/history_photo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
